syntax = "proto3";

package erponomics.manufacturing.domain.item.command;

import "google/protobuf/empty.proto";
import "create_item_request.proto";
import "delete_item_request.proto";

service ItemCommandService {
  rpc CreateItem(erponomics.manufacturing.domain.item.command.CreateItemRequest) returns (google.protobuf.Empty);
  rpc DeleteItem(erponomics.manufacturing.domain.item.command.DeleteItemRequest) returns (google.protobuf.Empty);
}
