syntax = "proto3";

package erponomics.manufacturing.domain.item.query;

import "get_item_request.proto";
import "get_item_response.proto";

service ItemQueryService {
  rpc GetItem(erponomics.manufacturing.domain.item.query.GetItemRequest) returns (erponomics.manufacturing.domain.item.query.GetItemResponse);
}
