syntax = "proto3";

package erponomics.manufacturing.v1.production_order.repository;

import "erponomics/manufacturing/v1/production_order.proto";

service ProductionOrderQueryService {
  rpc GetProductionOrder(GetProductionOrderRequest) returns (ProductionOrder) {
    option (google.api.http) = {
      get: "/v1/{name=productionOrders/*}"
    };
    option (google.api.method_signature) = "name";
  }

  rpc ListProductionOrders(ListProductionOrdersRequest)
    returns (ListProductionOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/productionOrders"
    };
  }

  message GetProductionOrderRequest {
    // The name of the production order to retrieve.
    // Format: productionOrders/{production_order}
    string name = 1 [
      (google.api.field_befavior) = REQUIRED,
      (google.api.resource_reference) = {
        type: "manufacturing.erponomics.com/ProductionOrder"
      }];
  }

  message ListProductionOrdersRequest {
    // The maximum number of production orders to return. The service may
    // return fewer than this value.
    int32 page_size = 1 [(google.api.field_behavior) = REQUIRED];

    // A page token, received from a previous `ListProductionOrders` call.
    // Provide this to retrieve the subsequent page.
    //
    // When paginating, all other parameters provided to `ListProductionOrders`
    // must match the call that provided the page token.
    string page_token = 2 [(google.api.field_behavior) = OPTIONAL];

    // A comma-separated list of fields to order by.
    // The default sorting order is ascending. Add `desc` after a field, to
    // sort it by descending order.
    string order_by = 3 [(google.api.field_behavior) = OPTIONAL];

    // A filter.
    string filter = 4 [(google.api.field_behavior) = OPTIONAL];
  }

  message ListProductionOrdersResponse {
    // The production orders.
    repeated ProductionOrder production_orders = 1;

    // A token, which can be sent as `page_token` to retrieve the next page.
    // If this field is omitted, there are no subsequent pages.
    string next_page_token = 2;

    // The total number of production orders after filtering.
    int32 total_size = 3;
  }
}
